# CMake__add_custom_command_Example

./: CMakeLists.txt  file1.cpp  file2.cpp  file3.cpp  makecpp.py  script.py
